manifest/discovery-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-discovery-server
  name: shopnow-discovery-server-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-discovery-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-discovery-server
      namespace: shopnow
    spec:
      containers:
        - image: 471112607220.dkr.ecr.ap-southeast-1.amazonaws.com/shopnow/discovery-server:v1
          imagePullPolicy: Always
          name: shopnow-discovery-server
          ports:
            - containerPort: 8761
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /app/src/main/resources/application.properties
              name: shopnow-discovery-server-application-properties-config-volume
              subPath: application.properties
      imagePullSecrets:
      - name: shopnow-registry-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: shopnow-discovery-server-application-properties-configmap
          name: shopnow-discovery-server-application-properties-config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: shopnow-discovery-server-service
  namespace: shopnow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 8761
      protocol: TCP
      targetPort: 8761
  selector:
    app: shopnow-discovery-server
  sessionAffinity: None
  type: ClusterIP
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: shopnow-discovery-server-ingress
#   namespace: shopnow
#   annotations:
#     alb.ingress.kubernetes.io/inbound-cidrs: 42.118.154.137/32
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
#     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:471112607220:certificate/96656faa-2549-4e38-8526-f24b02e75206
# spec:
#   ingressClassName: alb
#   rules:
#     - host: discovery-server-shopnow.cuongnv.social
#       http:
#         paths:
#           - backend:
#               service:
#                 name: shopnow-discovery-server-service
#                 port:
#                   number: 8761
#             path: /
#             pathType: Prefix
