manifest/keycloak-realms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopnow-keycloak-realms-deployment
  namespace: shopnow
  labels:
    app: shopnow-keycloak-realms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopnow-keycloak-realms
  template:
    metadata:
      labels:
        app: shopnow-keycloak-realms
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.3
          command:
            - "/opt/keycloak/bin/kc.sh"
            - "start-dev"
            - "--import-realm"
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /opt/keycloak/data/import/realm-export.json
              name: shopnow-keycloak-realms-json-configmap-config-volume
              subPath: keycloak.realms
      volumes:
        - configMap:
            defaultMode: 420
            name: shopnow-keycloak-realms-json-configmap
          name: shopnow-keycloak-realms-json-configmap-config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: shopnow-keycloak-realms-service
  namespace: shopnow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: shopnow-keycloak-realms
  sessionAffinity: None
  type: ClusterIP
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: shopnow-keycloak-realms-ingress
#   namespace: shopnow
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: keycloak-shopnow.cuongnv.social
#       http:
#         paths:
#           - backend:
#               service:
#                 name: shopnow-keycloak-realms-service
#                 port:
#                   number: 8080
#             path: /
#             pathType: Prefix
