manifest/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-product-service
  name: shopnow-product-service-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-product-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-product-service
      namespace: shopnow
    spec:
      containers:
        - image: 471112607220.dkr.ecr.ap-southeast-1.amazonaws.com/shopnow/product-service:v1
          imagePullPolicy: Always
          name: shopnow-product-service
          ports:
            - containerPort: 5861
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /app/src/main/resources/application.properties
              name: shopnow-product-service-application-properties-config-volume
              subPath: application.properties
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: shopnow-product-service-application-properties-configmap
          name: shopnow-product-service-application-properties-config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: shopnow-product-service-service
  namespace: shopnow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 5861
      protocol: TCP
      targetPort: 5861
  selector:
    app: shopnow-product-service
  sessionAffinity: None
  type: ClusterIP
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: shopnow-product-service-ingress
#   namespace: shopnow
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: product-service-shopnow.cuongnv.social
#       http:
#         paths:
#           - backend:
#               service:
#                 name: shopnow-product-service-service
#                 port:
#                   number: 5861
#             path: /
#             pathType: Prefix
