manifest/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-api-gateway
  name: shopnow-api-gateway-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-api-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-api-gateway
      namespace: shopnow
    spec:
      containers:
        - image: 471112607220.dkr.ecr.ap-southeast-1.amazonaws.com/shopnow/api-gateway:v1
          imagePullPolicy: Always
          name: shopnow-api-gateway
          ports:
            - containerPort: 5860
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /app/src/main/resources/application.properties
              name: shopnow-api-gateway-application-properties-config-volume
              subPath: application.properties
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: shopnow-api-gateway-application-properties-configmap
          name: shopnow-api-gateway-application-properties-config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: shopnow-api-gateway-service
  namespace: shopnow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 5860
      protocol: TCP
      targetPort: 5860
  selector:
    app: shopnow-api-gateway
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-api-gateway-ingress
  namespace: shopnow
  annotations:
    # alb.ingress.kubernetes.io/inbound-cidrs: 42.118.154.137/32
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:471112607220:certificate/96656faa-2549-4e38-8526-f24b02e75206
spec:
  ingressClassName: alb
  rules:
    - host: gw.cuongnv.social
      http:
        paths:
          - backend:
              service:
                name: shopnow-api-gateway-service
                port:
                  number: 5860
            path: /
            pathType: Prefix
