manifest/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-frontend
  name: shopnow-frontend-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-frontend
      namespace: shopnow-frontend
    spec:
      containers:
        - image: 471112607220.dkr.ecr.ap-southeast-1.amazonaws.com/shopnow/frontend:v3
          imagePullPolicy: Always
          name: shopnow-frontend
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: shopnow-frontend-service
  namespace: shopnow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: shopnow-frontend
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-frontend-ingress
  namespace: shopnow
  annotations:
    alb.ingress.kubernetes.io/inbound-cidrs: 42.118.154.137/32
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:471112607220:certificate/96656faa-2549-4e38-8526-f24b02e75206
spec:
  ingressClassName: alb
  rules:
    - host: shopnow.cuongnv.social
      http:
        paths:
          - backend:
              service:
                name: shopnow-frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
